<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="368dp"
    android:layout_height="495dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/te"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mujer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zapatilla"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spiZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cajaCantidadZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidadzapatilla"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cajaTotalZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/varlozapatillas"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/divider5"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clasico"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spiClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cajaCantidadClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidadclasico"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cajaTotalClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valorclasicos"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnPagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="Calculos"
        android:text="@string/comprar"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/CajaTotalPagarH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

</LinearLayout>