<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/txtHombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#12fdca"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/txtZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zapatilla"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spiZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/cajaCantidadZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidadzapatilla"
        android:inputType="number" />

    <TextView
        android:id="@+id/cajaTotalZapatilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <View
        android:id="@+id/divider5"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/txtClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clasico"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spiClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/cajaCantidadClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidadclasico"
        android:inputType="number" />

    <TextView
        android:id="@+id/cajaTotalClasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="Calculos"
            android:text="@string/comprar"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/CajaTotalPagarH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>