<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="368dp"
    android:layout_height="495dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">
    tools:context=".Principal">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginBottom="4dp"
        android:lineSpacingExtra="14sp"
        android:text="@string/emprezazxy"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHombre"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="36dp"
            android:layout_height="420dp"
            android:layout_weight="1"
            android:background="#12fdca"
            android:lineSpacingExtra="12sp"
            android:padding="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/hombre"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="157dp" />

        <Button
            android:id="@+id/btnMujer"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="38dp"
            android:layout_height="421dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:lineSpacingExtra="12sp"
            android:text="@string/mujer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="217dp" />
    </LinearLayout>

</LinearLayout>